# go-to-japan-ai

./: .gitlab-ci.yml  Dockerfile  README.md  budget_aggregation.json  crew.json  daily_activities.json  dining_recommender.json  gtjai.md  gtjai.md.pub  live_news.json  lodging_specialist.json  logs.txt  profile.json  pyproject.toml  quality_consistency_audit.json  requirements.txt  transport_planner.json  weather_analyst.json
.github copy/workflows/: ci.yml
.github/workflows/: ci.yml
result/: budget_aggregation.json  crew.json  daily_activities.json  itinerary_synthesis.json  itinerary_translation.json  live_news.json  orchestration_plan.json  profile.json  quality_consistency_audit.json  weather_analyst.json
src/: api.py
src/crew_outputs/: crew.json
src/db/: chroma.sqlite3
src/final_outputs/: final_output.json
src/go_to_japan/: crew.py  crew_gtj.py  main.py
src/go_to_japan/config/: agents.yaml  tasks.yaml
src/go_to_japan/go_to_japan_ai_storage/: .crewai_user.json  entity_memory.db  latest_kickoff_task_outputs.db  long_memory.db
src/go_to_japan/tools/: activity_tool.py  budget_management_tool.py  custom_tool.py  itinerary_synthesis_tool.py  tools.py  (+10 more)
src/result/: budget_aggregation.json  crew.json  daily_activities.json  exemple  itinerary_synthesis.json  itinerary_translation.json  live_news.json  profile.json  quality_consistency_audit.json  tmp.json  weather_analyst.json
src/tasks_outputs/: budget_aggregation.json  daily_activities.json  itinerary_synthesis.json  live_news.json  profile.json  quality_consistency_audit.json  weather_analyst.json
(+2 files in other folders)
