[project]
name = "go_to_japan"
version = "0.1.0"
description = "go-to-japan multi agent system"
authors = [{ name = "Brell SANWOUO", email = "brell.sanwouo@novalitix.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
go_to_japan = "go_to_japan.main:run"
run_crew = "go_to_japan.main:run"
train = "go_to_japan.main:train"
replay = "go_to_japan.main:replay"
test = "go_to_japan.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
